// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Typography/Link cancel w/ href 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0"
  href="http://example.com"
>
  Link
</a>
`;

exports[`Storyshots Basics|Typography/Link cancel w/ onClick 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0"
  href="/"
>
  Try clicking with different mouse buttons and modifier keys (shift/ctrl/alt/cmd)
</a>
`;

exports[`Storyshots Basics|Typography/Link no-cancel w/ href 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0"
  href="http://example.com"
>
  Link
</a>
`;

exports[`Storyshots Basics|Typography/Link no-cancel w/ onClick 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0"
  href="/"
>
  any click will go through
</a>
`;
